# cli_doc

./: CHANGELOG.md  Cargo.toml  README.md
docs/: cargo.html  hq.html
src/: commands.rs  html.rs  lib.rs  settings.rs  text.rs
src/extractor/: clap_parser.rs  clap_parser_tests.rs  man_parser.rs  man_parser_tests.rs  mod.rs  runner.rs  sections.rs
src/tests/: test.rs
templates/: command.html  page.html  script.js
