[package]
name = "cli_doc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"]}
askama = "0.14"
anyhow = "1.0"
colored = "3.0"
itertools = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = "1.43.1"

#parley = "0.5"
#skrifa = "0.31"
